--- a/style.css
+++ b/style.css
@@ -2,10 +2,27 @@
 
 body {
     font-family:"Roboto Condensed";
+    margin:0px;
+    padding:0px;
+    box-sizing: border-box;
 }
 
 .navbar{
     background: #FDF3DB;
     font-size: 20px;
     padding: 10px;
+}
+
+.slika{
+    overflow:hidden;
+    width:100%;
+    max-width: 100%;
+    height:900px;
+}
+
+.slika img{
+    display:block;
+    width:100%;
+    max-height:100%;
+    object-fit: cover;
 }
